apply plugin: 'java-library'

[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = [ "src/" ]
sourceSets.main.resources.srcDirs = [ "assets/" ]

dependencies {
    implementation project(":CB_Utils")
    implementation project(':mapsforge')
    implementation project(":CB_UI_Base")

    //sjxp-2.2.jar for TMSLayer.java xml parser
    implementation fileTree(dir: '../libs', include: ['sjxp-2.2.jar'])

    //libgdx
    implementation "com.badlogicgames.gdx:gdx:$gdxVersion"

    // https://mvnrepository.com/artifact/net.sf.kxml/kxml2
    implementation group: 'net.sf.kxml', name: 'kxml2', version: '2.3.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}